--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "@types/papaparse": "^5.0.1",
     "cordova-plugin-advanced-http": "2.2.0",
+    "cordova-sqlite-storage": "3.4.0",
     "core-js": "^2.5.4",
     "ngx-papaparse": "^3.0.4",
     "papaparse": "^5.1.0",
@@ -64,7 +66,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-sqlite-storage": {}
     }
   }
 }
