--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/pwa": "^0.803.10",
     "@angular/router": "~8.1.2",
+    "@angular/service-worker": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.15.0",
     "@ionic-native/http": "^5.15.0",
@@ -28,7 +30,10 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "@types/papaparse": "^5.0.1",
+    "build": "0.1.4",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-advanced-http": "2.2.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-sqlite-storage": "3.4.0",
     "core-js": "^2.5.4",
     "ngx-papaparse": "^3.0.4",
@@ -51,6 +56,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -67,7 +78,16 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-advanced-http": {},
-      "cordova-sqlite-storage": {}
-    }
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser"
+    ]
   }
 }
