--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cordova-plugin-advanced-http": "2.2.0",
     "cordova-sqlite-storage": "3.4.0",
     "core-js": "^2.5.4",
+    "ibm_db": "^2.6.1",
     "ibmcloud-appid": "^6.0.2",
     "ibmcloud-appid-js": "^0.3.1",
     "ngx-papaparse": "^3.0.4",
