--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,8 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": [    ],
     "lib": [
       "es2018",
       "dom"
